2019-03-04  Stefan Liebler  <stli@linux.ibm.com>

	* sysdeps/s390/s390-64/sysdep.h (ENTRY): Use alignment of 16byte.
	* sysdeps/s390/s390-32/sysdep.h: Likewise.

2019-03-02  TAMUKI Shoichi  <tamuki@linet.gr.jp>

	[BZ #24162]
	* localedata/locales/ja_JP (LC_TIME): Change the offset for Taisho
	gan-nen from 2 to 1.  Problem reported by Morimitsu, Junji.

2019-03-01  Gabriel F. T. Gomes  <gabriel@inconstante.eti.br>

	* misc/tst-ldbl-error.c (do_one_test): Adapt for reuse by nldbl
	tests.
	(do_test): Likewise.
	* misc/tst-ldbl-warn.c (do_one_test): Likewise.
	(do_test_call_varg): Likewise.
	(do_test_call_rarg): Likewise.
	* sysdeps/ieee754/ldbl-opt/Makefile
	[subdir == misc] (tests-internal): Add tst-nldbl-warn,
	tst-nldbl-error.
	($(objpfx)tst-nldbl-warn.c): New rule.
	($(objpfx)tst-nldbl-error.c): Likewise.
	(CFLAGS-tst-nldbl-warn.c, CFLAGS-tst-nldbl-error.c):
	New variables.

2019-03-01  Gabriel F. T. Gomes  <gabriel@inconstante.eti.br>

	[BZ #23984]
	* include/bits/error-ldbl.h: New file.
	* include/error.h: Include stdarg.h.  Declare internal functions
	__error_internal and __error_at_line_internal.
	* misc/Makefile (headers): Add bits/error-ldbl.h.
	* misc/bits/error-ldbl.h: New file.
	* misc/error.h [__LDBL_COMPAT]: Include bits/error-ldbl.h and
	avoid the inclusion of bits/error.h.
	* sysdeps/ieee754/ldbl-opt/Versions (libc): Add __nldbl_error,
	and __nldbl_error_at_line.
	* sysdeps/ieee754/ldbl-opt/nldbl-compat.c: Include error.h.
	(__nldbl_error, __ndlbl_error_at_line): New functions.
	* sysdeps/ieee754/ldbl-opt/nldbl-compat.h: Include error.h.
	Redirect error and error_at_line.
	* sysdeps/unix/sysv/linux/alpha/libc.abilist: Update.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/fpu/libc.abilist:
	Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/nofpu/libc.abilist:
	Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/libc-le.abilist:
	Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/libc.abilist:
	Likewise.