@@ -1,3 +1,10 @@
+2019-03-04  Florian Weimer  <fweimer@redhat.com>
+
+	* sysdeps/generic/ldsodefs.h (_dl_sysdep_open_zero_fill): Remove
+	declaration.
+	* elf/dl-load.c (_dl_map_object_from_fd): Assume MAP_ANON is
+	defined.
+
 2019-03-04  Stefan Liebler  <stli@linux.ibm.com>
 
 	* sysdeps/s390/s390-64/sysdep.h (ENTRY): Use alignment of 16byte.
